--- a/pdf/SeminarLaTeX/literatura.bib
+++ b/pdf/SeminarLaTeX/literatura.bib
@@ -1,8 +1,59 @@
-@misc{referenca,
-	author		=	"Ime Prezime",
-	title			=	"Naslov",
-	note			=	"Dodatno",
-	year			=	2012,
-	month		=	"Mjesec",
-	howpublished	= "\url{url}"
-},
+@article{Pavetic,
+author = {F. Pavetić, G. Žužić, M. Šikić},
+title = {{LCSk++: Practical similarity metric for long strings}},
+year = {2014}
+}
+
+@article{Benson,
+author = {G. Benson, A. Levy, B. R. Shalom},
+title = {{Longest common subsequence in k-length substrings}},
+year = {2014},
+journal = {CoRR, vol. abs/1402.2097}
+}
+
+@article{Hunt,
+author = {J.W. Hunt, T.G. Szymanski},
+title = {A Fast Algorithm for Computing Longest Common Subsequences},
+journal = {Comm. of the ACM},
+number = 5,
+volume = 20,
+year = 1977,
+pages = {350-353}
+}
+
+@article{Kuo,
+author = {S. Kuo, G.R. Cross},
+title = {An Improved Algorithm to Find the Length of the Longest Common
+Subsequence of Two Strings},
+journal = {ACM SIGIR Forum},
+number = {3-4},
+volume = 23,
+year = 1989,
+pages = {89-99}
+}
+
+@article{Survey,
+author = {L. Bergroth, H. Hakonen, T. Raita},
+title = {A Survey of Longest Common Subsequence Algorithms},
+journal = {SPIRE '00 Proceedings of the Seventh International Symposium on String Processing Information Retrieval (SPIRE'00)},
+year = 2000
+}
+
+@article{poljaci,
+author = {S. Deorowicz, S. Grabowski},
+title = {Efficient algorithms for the longest common subsequence in k-length
+substrings},
+journal = {arXiv:1311.4552},
+year = 2013
+}
+
+@misc{github,
+author = {F. Pavetić},
+title = {Original LCSk++ implementation},
+howpublished = "\url{https://github.com/fpavetic/lcskpp}",
+note = "[preuzeto 9. 1. 2017.]"
+}
+
+
+
+
